refactor: party commands

--- a/translations/en_us.json
+++ b/translations/en_us.json
@@ -155,7 +155,7 @@
 	"firmament.config.hud.ping-count": "Ping Count",
 	"firmament.config.hud.ping-count-hud": "Ping Count Hud",
 	"firmament.config.hud.ping-count-hud.description": "Shows Ping.",
-	"firmament.config.hud.ping-count-hud.display": "Ping %s",
+	"firmament.config.hud.ping-count-hud.display": "Ping: %s ms",
 	"firmament.config.hud.ping-count.description": "A HUD showing current Ping.",
 	"firmament.config.inventory-buttons-config": "Inventory Buttons",
 	"firmament.config.inventory-buttons-config.hover-text": "Hover Tooltip",
@@ -187,12 +187,28 @@
 	"firmament.config.lore-timers.show-creation.description": "Shows the creation or craft timestamp of the item. Sometimes this timestamp is retained when upgrading an item, so it isn't necessarily the craft time of this specific item, but rather one of its components.",
 	"firmament.config.lore-timers.show.description": "Shows when a timer in a lore (such as interest, auction duration) would end.",
 	"firmament.config.party-commands": "Party Commands",
+	"firmament.config.party-commands.allinvite": "Enable All Invite Command",
+	"firmament.config.party-commands.allinvite.description": "Will let people execute /party settings allinvite",
 	"firmament.config.party-commands.cooldown": "Cooldown",
 	"firmament.config.party-commands.cooldown.description": "Prevent people from spamming commands with a delay between party commands.",
+	"firmament.config.party-commands.coords": "Enable Coords Command",
+	"firmament.config.party-commands.coords.description": "Will send your coords in party when run",
 	"firmament.config.party-commands.enable": "Enable Party Commands",
 	"firmament.config.party-commands.enable.description": "Allow people in your party to use commands like !warp, !coords, !ptme and so on. See /firm partycommands for a list",
+	"firmament.config.party-commands.fps": "Enable FPS Command",
+	"firmament.config.party-commands.fps.description": "Will send your fps in party when run",
 	"firmament.config.party-commands.ignore-own": "Ignore Own Messages",
 	"firmament.config.party-commands.ignore-own.description": "Prevent your own messages from triggering party commands",
+	"firmament.config.party-commands.ping": "Enable Ping Command",
+	"firmament.config.party-commands.ping.description": "Will send your ping in party when run",
+	"firmament.config.party-commands.transfer": "Enable Transfer Command",
+	"firmament.config.party-commands.transfer.description": "Will let people execute /party transfer $username",
+	"firmament.config.party-commands.warp": "Enable Warp Command",
+	"firmament.config.party-commands.warp.description": "Will let people execute /party warp",
+	"firmament.config.party-commands.gay": "Enable Gay Command",
+	"firmament.config.party-commands.gay.description": "Will calculate people's gayness",
+	"firmament.config.party-commands.racism": "Enable Racism Command",
+	"firmament.config.party-commands.racism.description": "Will calculate people's racism",
 	"firmament.config.pets": "Pets",
 	"firmament.config.pets.highlight-pet": "Highlight active pet",
 	"firmament.config.pets.highlight-pet.description": "Highlight your currently selected pet in the /pets menu.",
