feat: undo key + color

--- a/translations/en_us.json
+++ b/translations/en_us.json
@@ -27,6 +27,10 @@
 	"firmament.config.block-zapper-overlay": "Block Zapper Overlay",
 	"firmament.config.block-zapper-overlay.block-zapper-overlay": "Block Zapper Overlay",
 	"firmament.config.block-zapper-overlay.block-zapper-overlay.description": "Shows what blocks will be zapped",
+	"firmament.config.block-zapper-overlay.color": "Colour",
+	"firmament.config.block-zapper-overlay.color.description": "The color that the blocks will be highlighted in",
+	"firmament.config.block-zapper-overlay.undo-key": "Undo Keybind",
+	"firmament.config.block-zapper-overlay.undo-key.description": "Keybind to undo your zap",
 	"firmament.config.bonemerang-overlay": "Bonemerang Overlay",
 	"firmament.config.bonemerang-overlay.bonemerang-overlay": "Bonemerang Overlay",
 	"firmament.config.bonemerang-overlay.bonemerang-overlay-hud": "Bonemerang Overlay Hud",
